fix mini hud drag, add collapse controls

--- a/CityWatchdog/UI/src/mods/InfoCheckbox/InfoCheckbox.module.scss
+++ b/CityWatchdog/UI/src/mods/InfoCheckbox/InfoCheckbox.module.scss
@@ -54,8 +54,8 @@
 }
 
 .count {
-    min-width: 38rem;
-    margin-right: 4rem;
+    min-width: 30rem;
+    margin-right: 1rem;
     color: rgba(254, 254, 254, 0.82);
     font-size: var(--fontSizeXS);
     font-weight: 700;
