--- a/CityWatchdog/UI/src/mods/MiniHud/MiniHud.module.scss
+++ b/CityWatchdog/UI/src/mods/MiniHud/MiniHud.module.scss
@@ -3,7 +3,7 @@
 
 .hud {
     position: absolute;
-    z-index: 20;
+    z-index: 1000;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +24,7 @@
     border-bottom-width: 0;
     border-left-width: 0;
     box-shadow: 0 2rem 8rem rgba(0, 0, 0, 0.25);
+    pointer-events: auto;
 }
 
 .glass {
@@ -56,7 +57,7 @@
 }
 
 .topCenter {
-    top: 4rem;
+    top: 8rem;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -67,7 +68,7 @@
 }
 
 .draggableHorizontal {
-    top: 4rem;
+    top: 8rem;
     left: 50%;
 }
 
@@ -130,6 +131,6 @@
 }
 
 .hud:hover .count {
-    font-size: var(--fontSizeS);
+    font-size: 15rem;
     font-weight: 800;
 }
